--- a/TeslaExplorer/Views/Home/Index.cshtml
+++ b/TeslaExplorer/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
 
                     <div class="custom-control custom-checkbox mb-3">
                         <input type="checkbox" class="custom-control-input" id="customCheck1" name="SavePassword" @(Model.IsSavePassword ? "checked" : string.Empty)>
-                        <label class="custom-control-label" for="customCheck1">Remember password</label>
+                        @*<label class="custom-control-label" for="customCheck1">Remember password</label>*@
                     </div>
                     <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Sign in</button>
                 </form>
