--- a/TeslaExplorer/Views/Shared/_Layout.cshtml
+++ b/TeslaExplorer/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - TeslaExplorer</p>
+            <p>&copy; @DateTimeOffset.Now.Year - TeslaExplorer</p>
         </footer>
     </div>
     <environment include="Development">
