--- a/TeslaExplorer/Views/Home/Index.cshtml
+++ b/TeslaExplorer/Views/Home/Index.cshtml
@@ -2,8 +2,19 @@
 @{
     ViewData["Title"] = "Login";
 }
-
 <div class="row">
+    <div class="col">
+        <div>I built this app for fun so I could start charging my car from a web browser.  I do not provide any guarantees that this application will work as intended, use at your own risk.</div>
+
+        <div>The app provides some basic functionality</div>
+        <ul><li>Login/logout</li><li>View vehicles linked to your account</li><li>View vehicle details</li><li>Start and stop charging</li><li>Set state of charge limit</li></ul>
+        <div>Security</div>
+        <ul><li>The app does not store any information regarding your Tesla account password.</li>
+            <li>Your Tesla account username is stored in server memory, which is cleared after your session is been inactive for 20 minutes.</li>
+            <li>No information is stored in a database regarding your activity or anything related to your Tesla account.</li>
+        </ul>
+        <div>Source code for this app is on <a href="https://github.com/GitBenM/TeslaExplorer">GitHub</a></div>
+    </div>
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
             <div class="card-body">
