moved the google analytics to the login page so that user data wouldn't be collected that is present in urls

--- a/TeslaExplorer/Views/Home/Index.cshtml
+++ b/TeslaExplorer/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
         <div>The app provides some basic functionality</div>
         <ul><li>Login/logout</li><li>View vehicles linked to your account</li><li>View vehicle details</li><li>Start and stop charging</li><li>Set state of charge limit</li></ul>
         <div>Security</div>
-        <ul><li>The app does not store any information regarding your Tesla account password.</li>
+        <ul>
+            <li>The app does not store any information regarding your Tesla account password.</li>
             <li>Your Tesla account username is stored in server memory, which is cleared after your session is been inactive for 20 minutes.</li>
             <li>No information is stored in a database regarding your activity or anything related to your Tesla account.</li>
         </ul>
@@ -40,3 +41,11 @@
         </div>
     </div>
 </div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142603971-1"></script>
+<script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-142603971-1');
+</script>
