--- a/TeslaExplorer/Views/Home/Index.cshtml
+++ b/TeslaExplorer/Views/Home/Index.cshtml
@@ -8,11 +8,12 @@
 
         <div>The app provides some basic functionality</div>
         <ul><li>Login/logout</li><li>View vehicles linked to your account</li><li>View vehicle details</li><li>Start and stop charging</li><li>Set state of charge limit</li></ul>
-        <div>Security</div>
+        <div>Privacy</div>
         <ul>
-            <li>The app does not store any information regarding your Tesla account password.</li>
-            <li>Your Tesla account username is stored in server memory, which is cleared after your session is been inactive for 20 minutes.</li>
-            <li>No information is stored in a database regarding your activity or anything related to your Tesla account.</li>
+            <li>The app does not store your Tesla account password.</li>
+            <li>The app stores your Tesla account username in server memory while your session is active.</li>
+            <li>Your username is deleted from server memory automatically, after your session is been inactive for 20 minutes.</li>
+            <li>The app does not log any information regarding your activity or Tesla account credentials.</li>
         </ul>
         <div>Source code for this app is on <a href="https://github.com/GitBenM/TeslaExplorer">GitHub</a></div>
     </div>
