updated privacy statement

--- a/TeslaExplorer/Views/Home/Index.cshtml
+++ b/TeslaExplorer/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
         <ul>
             <li>The app does not store your Tesla account password.</li>
             <li>The app stores your Tesla account username in server memory while your session is active.</li>
-            <li>Your username is deleted from server memory automatically, after your session is been inactive for 20 minutes.</li>
+            <li>The app deletes your Tesla account username after 20 minutes of inactivity.</li>
             <li>The app does not log any information regarding your activity or Tesla account credentials.</li>
         </ul>
         <div>Source code for this app is on <a href="https://github.com/GitBenM/TeslaExplorer">GitHub</a></div>
