updated read me.

--- a/TeslaExplorer/Views/Home/Index.cshtml
+++ b/TeslaExplorer/Views/Home/Index.cshtml
@@ -4,10 +4,27 @@
 }
 <div class="row">
     <div class="col">
-        <div>I built this app for fun so I could start charging my car from a web browser.  I do not provide any guarantees that this application will work as intended, use at your own risk.</div>
-
-        <div>The app provides some basic functionality</div>
-        <ul><li>Login/logout</li><li>View vehicles linked to your account</li><li>View vehicle details</li><li>Start and stop charging</li><li>Set state of charge limit</li></ul>
+        <div>Tesla Explorer is a fun way for me to learn new things and present information about my Tesla vehicle in a manner I find pleasing.</div>
+        <div>The app has the following features</div>
+        <ul>
+            <li>Login</li>
+            <li>View account vehicles</li>
+            <li>View vehicle details</li>
+            <li>Start and stop charging</li>
+            <li>Set state of charge limit</li>
+        </ul>
+        <div>Features I want to add:</div>
+        <ul>
+            <li>Better wake up management</li>
+            <li>Smart HVAC scheduling
+            <ul><li>Turn on HVAC to condition the cabin on a schedule instead of doing it manually</li></ul>
+            </li>
+            <li>Smart charging schedule:
+            <ul>
+                <li>Start charging based on the state of charge, rate of charge sampled (user defined sampling time) and state of charge limit</li>
+                <li>Avoids the situation when the scheduled charge start time doesn't allow enough time to replenish the previous days driving</li>
+            </ul></li>
+        </ul>
         <div>Privacy</div>
         <ul>
             <li>The app does not store your Tesla account password.</li>
@@ -15,7 +32,8 @@
             <li>The app deletes your Tesla account username after 20 minutes of inactivity.</li>
             <li>The app does not log any information regarding your activity or Tesla account credentials.</li>
         </ul>
-        <div>Source code for this app is on <a href="https://github.com/GitBenM/TeslaExplorer">GitHub</a></div>
+        <div>This app is provided free of charge under the <a href="https://github.com/GitBenM/TeslaExplorer/blob/master/LICENSE">MIT License</a></div>
+        <div>Source code is available on <a href="https://github.com/GitBenM/TeslaExplorer">GitHub</a></div>
     </div>
     <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
         <div class="card card-signin my-5">
